--- a/ACAT_main/index.html
+++ b/ACAT_main/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>acat</title>
+
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      // var res = window.innerWidth;
+      // if(res < 786){
+      //   window.location.href = "http://www.baidu.com"
+      // }
+
+    </script>
   </body>
 </html>
