--- a/ACAT_main/index.html
+++ b/ACAT_main/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>acat</title>
-
+    <style>
+      html,body{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        list-style: none;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
